# csfreezetime

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
analyze-wasm/: demoparser2.d.ts  demoparser2_bg.wasm
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
assets/: BufferResource-DRBwF97W.js  CanvasRenderer-DusFgkDv.js  Filter-C2AiCaWC.js  RenderTargetSystem-kPrPdMco.js  WebGLRenderer-EwWp4VOm.js  WebGPURenderer-CbQKejSy.js  analyze.worker-D3q6JSHJ.js  browserAll-CRuvxSGc.js  index-D5PX1yQE.css  index-_a1a5BxE.js  localcollab-CIaNnw0_.js  localcompute-d6nbkhxM.js  momentslite-CViM6SeO.js  vetosim-CWEzIrX6.js  webworkerAll-V7F9RClO.js
data/: manifest.json  search-index.json
data/api/: clusters~map_de_ancient~side_CT.json  clusters~map_de_ancient~side_T.json  clusters~map_de_anubis~side_CT.json  clusters~map_de_anubis~side_T.json  clusters~map_de_dust2~side_CT.json  clusters~map_de_dust2~side_T.json  matches.json  (+6107 more)
deploy/: README.md  migrate-from-mac.sh  setup-server.sh
docs/: backlog.md  el-kitabi.html  how-it-works.md  mimari.md
infra/: .env.example  docker-compose.yml
radars/: README.md
scripts/: apply-ch-schema.sh  apply-pg-schema.sh  e2e-test.sh  ingest-dir.sh  migrate-bundles-r2.sh  publish.sh  start-all.sh  stop-all.sh  sync-memory.sh  test-dsl.sh  test-ml.sh  weekly.sh
services/enrichment/: pyproject.toml
services/enrichment/src/enrichment/: enrich.py  main.py
services/ml/: pyproject.toml
services/ml/src/ml/: aliases.py  anomaly.py  boost.py  boosts.py  clustering.py  clutch.py  db.py  evaluate.py  features.py  flashstats.py  integrity.py  main.py  places.py  predict.py  recency.py  roles.py  rotations.py  setups.py  templates.py  tendencies.py  tournaments.py  utility.py  winprob.py
services/parser-worker/: Cargo.toml
services/parser-worker/src/: main.rs  parse.rs  pg.rs
(+8843 files in other folders)
