[project]
name = "enrichment"
version = "0.1.0"
description = "CS2 demo enrichment worker: trade hesaplari, buy siniflandirmasi (mimari.md §4.3)"
requires-python = ">=3.11"
dependencies = [
    "nats-py>=2.9",
    "psycopg[binary]>=3.2",
]

[project.scripts]
enrichment-worker = "enrichment.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enrichment"]
