[project]
name = "ml"
version = "0.1.0"
description = "Yerel istatistik modulleri: strateji kumeleme, takim egilimleri, anomali (mimari.md §6.2/6.3 — LLM yok, dis servis yok)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "psycopg[binary]>=3.2",
    "clickhouse-connect>=0.8",
]

[project.scripts]
ml-jobs = "ml.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml"]
